2005-02-02 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	Added new "createWatchpoint" method that accepts position information.
	* CDIDebugModel.java

2005-01-19 Mikhail Khodjaiants
	Fix for bug 83051: Add global variables deletes existing ones when new added.
	* ICGlobalVariableManager.java
	* CGlobalVariableManager.java
	* CVariableFactory.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82858: NPE when adding global variable to variable view.
	* CDebugTarget.java
	* CVariableFactory.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82800: Make "Resume At Line" action retargettable.
	CDebugElement should provide an adapter to ICDebugTarget.
	* CDebugElement.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82800: Make "Resume At Line" action retargettable.
	CStackFrame should provide an adapter to IJumpToLine and IJumpToAddress.
	* CStackFrame.java

2005-01-12 Mikhail Khodjaiants
	Bug 73168: Use memory view provided by Eclipse platform in CDT. 
	Removed the old memory view.
	* CDebugCorePlugin.java
	* CDebugModel.java: removed
	* ICMemoryManager.java: removed
	* IFormattedMemoryBlock.java: removed
	* IFormattedMemoryBlockRow.java: removed
	* CMemoryManager.java: removed
	* CSignalManager.java
	* CDebugTarget.java
	* CFormattedMemoryBlock.java: removed

2005-01-12 Mikhail Khodjaiants
	Fix bug 82601: Enhance the ICDIMemoryBlock interface.
	* CMemoryBlockExtension.java

2005-01-10 Mikhail Khodjaiants
	PR 82601 changes to the memory block interface
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java

2005-01-11 Mikhail Khodjaiants
	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
	* CDebugTarget.java
	* CThread.java
	* CoreModelMessages.properties

2005-01-10 Mikhail Khodjaiants
	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
	* CDebugTarget.java
	* CThread.java
	* CoreModelMessages.properties
