@@ -272,9 +272,9 @@ public class CDIDebugModel {
 	public static ICWatchpoint createWatchpoint( String sourceHandle, IResource resource, int charStart, int charEnd, int lineNumber, boolean writeAccess, boolean readAccess, String expression, boolean enabled, int ignoreCount, String condition, boolean register ) throws CoreException {
 		HashMap attributes = new HashMap( 10 );
 		attributes.put( IBreakpoint.ID, getPluginIdentifier() );
-		attributes.put( IMarker.CHAR_START, new Integer( 0 ) );
-		attributes.put( IMarker.CHAR_END, new Integer( 0 ) );
-		attributes.put( IMarker.LINE_NUMBER, new Integer( -1 ) );
+		attributes.put( IMarker.CHAR_START, new Integer( charStart ) );
+		attributes.put( IMarker.CHAR_END, new Integer( charEnd ) );
+		attributes.put( IMarker.LINE_NUMBER, new Integer( lineNumber ) );
 		attributes.put( IBreakpoint.ENABLED, new Boolean( enabled ) );
 		attributes.put( ICBreakpoint.IGNORE_COUNT, new Integer( ignoreCount ) );
 		attributes.put( ICBreakpoint.CONDITION, condition );
